--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-stars": "^2.2.5",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.79.0"
   }
 }
